--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         </section>
     </div>
 
-    <footer></footer>
+    <footer>
+        <h1>Todos direitos reservados, receitas Foodfy.</h1>
+    </footer>
     </body>
 </html>
