--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <img src="img/logo.png" alt="Foodfy">
 
-            <a href="#">Sobre</a>
+            <a href="about.html">Sobre</a>
             <a href="#">Receitas</a>
         </header>
 
