--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <img src="img/logo.png" alt="Foodfy">
 
             <a href="about.html">Sobre</a>
-            <a href="#">Receitas</a>
+            <a href="revenue.html">Receitas</a>
         </header>
 
         <div class="begin">
