--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
         <header>
             <a href="index.html"><img src="img/logo.png" alt="Foodfy"></a>
 
-            <a href="#">Sobre</a>
-            <a href="#">Receitas</a>
+            <a href="about.html">Sobre</a>
+            <a href="revenue.html">Receitas</a>
         </header>
         
         <section class="resume">
