--- a/revenue.html
+++ b/revenue.html
@@ -20,16 +20,16 @@
 
                 <div class="card" id="card1">
 
-                    <img src="img/burger.png" alt="Hamburguer" srcset="" id="burgueer">
+                    <img src="img/burger.png" alt="" srcset="" id="burger">
 
                     <div class="name">
                         <h1>Triplo Bacon Burger</h1>
                     </div>
-                
+
                     <div class="autor">
                         <h1>por Jorge Relato</h1>
                     </div>
-                </div>   
+                </div>
 
                 <div class="card" id="card2"> 
 
